{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 264,
  "lineage": "0061170b-504f-8a4a-a41b-bb91a92b0d48",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 32768,
            "id": "sgrule-2740152442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09303c13a1484f269",
            "self": false,
            "source_security_group_id": "sg-0b9492e1807cd4a5b",
            "to_port": 61000,
            "type": "ingress"
          },
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.ecs_instances.aws_security_group.instance",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:112636953101:loadbalancer/app/wego-test-wego-test/b9f3d71a395aab0e",
            "arn_suffix": "app/wego-test-wego-test/b9f3d71a395aab0e",
            "dns_name": "wego-test-wego-test-2043437524.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:112636953101:loadbalancer/app/wego-test-wego-test/b9f3d71a395aab0e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wego-test-wego-test",
            "security_groups": [
              "sg-0b9492e1807cd4a5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00688dcfb2552d97c"
              },
              {
                "subnet_id": "subnet-02cbfbd87405f3313"
              }
            ],
            "subnets": [
              "subnet-00688dcfb2552d97c",
              "subnet-02cbfbd87405f3313"
            ],
            "tags": {
              "Environment": "wego-test"
            },
            "vpc_id": "vpc-05a2b285a70ac0764",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:112636953101:listener/app/wego-test-wego-test/b9f3d71a395aab0e/86a154121b59416b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:112636953101:targetgroup/wego-test-wego-test-default/404365b1b6b4444f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:112636953101:listener/app/wego-test-wego-test/b9f3d71a395aab0e/86a154121b59416b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:112636953101:loadbalancer/app/wego-test-wego-test/b9f3d71a395aab0e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.ecs.module.alb.aws_alb.alb",
            "module.ecs.module.alb.aws_alb_target_group.default",
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:112636953101:targetgroup/wego-test-wego-test-default/404365b1b6b4444f",
            "arn_suffix": "targetgroup/wego-test-wego-test-default/404365b1b6b4444f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:112636953101:targetgroup/wego-test-wego-test-default/404365b1b6b4444f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wego-test-wego-test-default",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "wego-test"
            },
            "target_type": "instance",
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:112636953101:security-group/sg-0b9492e1807cd4a5b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b9492e1807cd4a5b",
            "ingress": [],
            "name": "wego-test-wego-test_alb",
            "name_prefix": "",
            "owner_id": "112636953101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "wego-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_from_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3593857054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b9492e1807cd4a5b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2023117844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b9492e1807cd4a5b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs_instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:112636953101:security-group/sg-09303c13a1484f269",
            "description": "Used in wego-test",
            "egress": [],
            "id": "sg-09303c13a1484f269",
            "ingress": [],
            "name": "wego-test_wego-test_default",
            "name_prefix": "",
            "owner_id": "112636953101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "wego-test",
              "Environment": "wego-test",
              "InstanceGroup": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs_instances",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1133986356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09303c13a1484f269",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.ecs.module.ecs_instances.aws_security_group.instance",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0660fc0171db3cba81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0979ec8d91ec44505",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0660fc0171db3cba8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.nat.aws_nat_gateway.nat",
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-033f4c7757d21c84c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d6313fb902a31b74",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033f4c7757d21c84c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.nat.aws_nat_gateway.nat",
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-011db702f3581b23f",
            "id": "r-rtb-06f79a133ba99e31c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f79a133ba99e31c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.vpc.aws_internet_gateway.vpc",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-011db702f3581b23f",
            "id": "r-rtb-089a1e413f25015ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089a1e413f25015ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.vpc.aws_internet_gateway.vpc",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-bb2c1788",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-62-206.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.62.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f350e3c",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-177-69-144.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.69.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-bb2c1788",
            "id": "nat-0979ec8d91ec44505",
            "network_interface_id": "eni-06a185d3248d50d68",
            "private_ip": "10.0.0.36",
            "public_ip": "54.241.62.206",
            "subnet_id": "subnet-00688dcfb2552d97c"
          },
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f350e3c",
            "id": "nat-0d6313fb902a31b74",
            "network_interface_id": "eni-07395adb5bc18c4cd",
            "private_ip": "10.0.1.163",
            "public_ip": "54.177.69.144",
            "subnet_id": "subnet-02cbfbd87405f3313"
          },
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0660fc0171db3cba8",
            "owner_id": "112636953101",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "wego-test",
              "Name": "wego-test_private_subnet_us-west-1c"
            },
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-033f4c7757d21c84c",
            "owner_id": "112636953101",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "wego-test",
              "Name": "wego-test_private_subnet_us-west-1b"
            },
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db14bfa664952f62",
            "route_table_id": "rtb-0660fc0171db3cba8",
            "subnet_id": "subnet-0345d118b5ea4e759"
          },
          "dependencies": [
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.private_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0220c74219a93a96e",
            "route_table_id": "rtb-033f4c7757d21c84c",
            "subnet_id": "subnet-0e0e7007057dec464"
          },
          "dependencies": [
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.private_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:112636953101:subnet/subnet-0345d118b5ea4e759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.50.0/24",
            "id": "subnet-0345d118b5ea4e759",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112636953101",
            "tags": {
              "Environment": "wego-test",
              "Name": "wego-test_private_subnet_us-west-1c"
            },
            "tags_all": {
              "Environment": "wego-test",
              "Name": "wego-test_private_subnet_us-west-1c"
            },
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:112636953101:subnet/subnet-0e0e7007057dec464",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.51.0/24",
            "id": "subnet-0e0e7007057dec464",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112636953101",
            "tags": {
              "Environment": "wego-test",
              "Name": "wego-test_private_subnet_us-west-1b"
            },
            "tags_all": {
              "Environment": "wego-test",
              "Name": "wego-test_private_subnet_us-west-1b"
            },
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06f79a133ba99e31c",
            "owner_id": "112636953101",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "wego-test",
              "Name": "wego-test_public_subnet_us-west-1c"
            },
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-089a1e413f25015ca",
            "owner_id": "112636953101",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "wego-test",
              "Name": "wego-test_public_subnet_us-west-1b"
            },
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fce0be4ee18e0c59",
            "route_table_id": "rtb-06f79a133ba99e31c",
            "subnet_id": "subnet-00688dcfb2552d97c"
          },
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efb0ccf27b5002b3",
            "route_table_id": "rtb-089a1e413f25015ca",
            "subnet_id": "subnet-02cbfbd87405f3313"
          },
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:112636953101:subnet/subnet-00688dcfb2552d97c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00688dcfb2552d97c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112636953101",
            "tags": {
              "Environment": "wego-test",
              "Name": "wego-test_public_subnet_us-west-1c"
            },
            "tags_all": {
              "Environment": "wego-test",
              "Name": "wego-test_public_subnet_us-west-1c"
            },
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:112636953101:subnet/subnet-02cbfbd87405f3313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02cbfbd87405f3313",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112636953101",
            "tags": {
              "Environment": "wego-test",
              "Name": "wego-test_public_subnet_us-west-1b"
            },
            "tags_all": {
              "Environment": "wego-test",
              "Name": "wego-test_public_subnet_us-west-1b"
            },
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:112636953101:internet-gateway/igw-011db702f3581b23f",
            "id": "igw-011db702f3581b23f",
            "owner_id": "112636953101",
            "tags": {
              "Environment": "wego-test"
            },
            "vpc_id": "vpc-05a2b285a70ac0764"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:112636953101:vpc/vpc-05a2b285a70ac0764",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021b7f323bd15d2f1",
            "default_route_table_id": "rtb-0983d531e70ddfae9",
            "default_security_group_id": "sg-042d56a69b948d649",
            "dhcp_options_id": "dopt-cb9ec2ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05a2b285a70ac0764",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0983d531e70ddfae9",
            "owner_id": "112636953101",
            "tags": {
              "Environment": "wego-test",
              "Name": "wego-test"
            },
            "tags_all": {
              "Environment": "wego-test",
              "Name": "wego-test"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}